grafana.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitor
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - hosts_name
    secretName: enterprisebot
  rules:
  - host: host_mtrices_name
    http:
      paths:
      - backend:
          serviceName: prometheus-grafana
          servicePort: 80
