prometheus.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - host_mtrices_name
      secretName: secret_name
  rules:
    - host: host_mtrices_name
      http:
        paths:
          - path: /*
            backend:
              serviceName: prometheus-prometheus-oper-prometheus
              servicePort: 9090
          - path: /grafana/*
            backend:
              serviceName: prometheus-grafana
              servicePort: 80
